# geovectors

./: pyproject.toml  requirements.txt
geovectorslib/: __init__.py
