[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geovectorslib"
version = "1.03"
description = "Vectorized geodesic calculations."

license = "MIT"

authors = ["Oleg Medvedev <omdv.public@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/geovectorslib"
documentation = "https://geovectorslib.readthedocs.io"
repository = "https://github.com/omdv/geovectors"

keywords = [
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["geovectorslib*"]
