[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geovectorslib"
version = "1.03"
description = "Vectorized geodesic calculations."
license = "MIT"
authors = [
  { name="52N authors", email="info@52north.org" },
]
readme = "README.md"
keywords = [
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["geovectorslib*"]
